# executable.as

./: .gitmodules  CMakeLists.txt  README.md  README.md.template  vcpkg.json
lib/: program.cmake
src/: main.cpp
