cmake_minimum_required(VERSION 3.6)
set(VI_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/deps/mavi CACHE STRING "Mavi directory")
set(VI_USE_JIT {{USE_JIT}} CACHE BOOL "JIT can be used")
set(VI_USE_SIMD {{USE_SIMD}} CACHE BOOL "SIMD is preferred")
include(${VI_DIRECTORY}/lib/toolchain.cmake)
project({{PROJECT_NAME}})
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/../bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/../bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/../bin)
add_executable({{PROJECT_NAME}}
    ${CMAKE_CURRENT_SOURCE_DIR}/deps/mavi.as/src/runtime.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
set_target_properties({{PROJECT_NAME}} PROPERTIES
		OUTPUT_NAME "vi"
		CXX_STANDARD ${VI_CXX}
        CXX_STANDARD_REQUIRED ON
		CXX_EXTENSIONS OFF
		VERSION ${PROJECT_VERSION}
		SOVERSION ${PROJECT_VERSION})
if (MSVC)
    set(CMAKE_EXE_LINKER_FLAGS "/ENTRY:mainCRTStartup /SUBSYSTEM:WINDOWS")
endif()
add_subdirectory(${VI_DIRECTORY} mavi)
link_directories(${VI_DIRECTORY})
target_include_directories({{PROJECT_NAME}} PRIVATE ${VI_DIRECTORY})
target_link_libraries({{PROJECT_NAME}} PRIVATE mavi)