cmake_minimum_required(VERSION 3.6)
set(VI_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/deps/mavi CACHE STRING "Mavi directory")
set(VI_USE_JIT {{BUILDER_USE_JIT}} CACHE BOOL "---")
set(VI_USE_SIMD {{BUILDER_USE_SIMD}} CACHE BOOL "---")
set(VI_USE_FAST_MEMORY {{BUILDER_USE_FAST_MEMORY}} CACHE BOOL "---")
include(${VI_DIRECTORY}/lib/toolchain.cmake)
project({{BUILDER_OUTPUT}})
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/../bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/../bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/../bin)
include(lib/program.cmake)
add_executable({{BUILDER_OUTPUT}}
    ${CMAKE_CURRENT_SOURCE_DIR}/deps/mavi.as/src/runtime.h
    ${CMAKE_CURRENT_SOURCE_DIR}/deps/mavi.as/src/runtime.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
set_target_properties({{BUILDER_OUTPUT}} PROPERTIES
		OUTPUT_NAME "{{BUILDER_OUTPUT}}"
		CXX_STANDARD ${VI_CXX}
        CXX_STANDARD_REQUIRED ON
		CXX_EXTENSIONS OFF
		VERSION ${PROJECT_VERSION}
		SOVERSION ${PROJECT_VERSION})
if (MSVC)
    set(CMAKE_EXE_LINKER_FLAGS "/ENTRY:mainCRTStartup /SUBSYSTEM:WINDOWS")
endif()
add_subdirectory(${VI_DIRECTORY} mavi)
link_directories(${VI_DIRECTORY})
target_include_directories({{BUILDER_OUTPUT}} PRIVATE ${VI_DIRECTORY})
target_link_libraries({{BUILDER_OUTPUT}} PRIVATE mavi)